--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,9 +14,12 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class=""><a href="/pages/about">About</a></li>
-	        <li><a href="/pages/contact">Contact</a></li>
-	        
+	      	<li class=""><%= link_to "About", pages_about_path %></li>
+	      	<li class=""><%= link_to "Contact", pages_contact_path %></li>
+	      	<li class=""><%= link_to "Sign Up", new_user_registration_path %></li>
+	      	<li class=""><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+	      	<li class=""><%= link_to "Log In", new_user_session_path %></li>
+	      	<li class=""><%= link_to "Edit Profile", edit_user_registration_path %></li>			        
 	      </ul>
 	     
 	    </div><!-- /.navbar-collapse -->
