--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,20 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	      	<li class=""><%= link_to "About", pages_about_path %></li>
-	      	<li class=""><%= link_to "Contact", pages_contact_path %></li>
-	      	<li class=""><%= link_to "Sign Up", new_user_registration_path %></li>
-	      	<li class=""><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-	      	<li class=""><%= link_to "Log In", new_user_session_path %></li>
-	      	<li class=""><%= link_to "Edit Profile", edit_user_registration_path %></li>			        
+	      	<li class=""><%= link_to "Contact", pages_contact_path %></li>		 
+	      </ul>
+
+	      <ul class="nav navbar-nav navbar-right">
+	      	<% if user_signed_in? %>
+	      		<li class=""><%= link_to "Edit Profile", edit_user_registration_path %></li>
+				<li class=""><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+
+			<% else %>
+
+	      		<li class=""><%= link_to "Sign Up", new_user_registration_path %></li>
+	      	
+	      		<li class=""><%= link_to "Log In", new_user_session_path %></li>
+	      	<% end %>
 	      </ul>
 	     
 	    </div><!-- /.navbar-collapse -->
