--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
 
 	      <ul class="nav navbar-nav navbar-right">
 	      	<% if user_signed_in? %>
+	      		<li class=""><%= link_to "Manage Listings", seller_path %></li>
 	      		<li class=""><%= link_to "Edit Profile", edit_user_registration_path %></li>
 				<li class=""><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 
