Added banner to homepage

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,3 +36,15 @@ body {
     font-size: 18px;
   }
 }
+
+.jumbotron {
+  background-image: url('jumbotron.jpg');
+  h1, h2 {
+    font-family: guardian-egyptt, georgia, serif;
+    color: #FFFFFF;
+  }
+}
+
+h1 {
+  
+}
