--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -34,26 +34,27 @@
     <%= f.label :image %><br>
     <%= f.file_field :image, class: "form-control"  %>
   </div>
+  <% if current_user.recipient.blank? %>
+    <br>
+    <h1>Bank Account Information</h1>
+    <h4>Bank details are required to collect receipts for successful transactions</h4>
+    <br>
 
-  <br>
-  <h1>Bank Account Information</h1>
-  <h4>Bank details are required to collect receipts for successful transactions</h4>
-  <br>
+     <div class="form-group">
+      <%= label_tag :country %>
+      <%= text_field_tag :country, nil, { :name => nil, :'data-stripe' => "country", class: "form-control" } %>
+    </div>
+    <div class="form-group">
+      <%= label_tag :routing_number %>
+      <%= text_field_tag :routing_number, nil, { :name => nil, :'data-stripe' => "routingNumber", class: "form-control" } %>
+    </div>
+    <div class="form-group">
+      <%= label_tag :account_number %>
+      <%= text_field_tag :account_number, nil, { :name => nil, :'data-stripe' => "accountNumber", class: "form-control" } %>
+    </div>
+  <% end %>
 
-   <div class="form-group">
-    <%= label_tag :country %>
-    <%= text_field_tag :country, nil, { :name => nil, :'data-stripe' => "country", class: "form-control" } %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :routing_number %>
-    <%= text_field_tag :routing_number, nil, { :name => nil, :'data-stripe' => "routingNumber", class: "form-control" } %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :account_number %>
-    <%= text_field_tag :account_number, nil, { :name => nil, :'data-stripe' => "accountNumber", class: "form-control" } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit class: "btn btn-primary" %>
-  </div>
+    <div class="form-group">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
 <% end %>
