--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -21,7 +21,7 @@
 				  <ul class="dropdown-menu" role="menu">
 				    <li><%= link_to "View", listing, class: "btn btn-link" %></li>
 				    <li><%= link_to "Edit", edit_listing_path(listing), class: "btn btn-link" %></li>
-				    <li><%= link_to "Destroy", listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></li>
+				    <li><%= link_to "Delete", listing, method: :delete, data: { confirm: 'Are you sure you want to delete this item from our database? This action cannot be undone.' }, class: "btn btn-link" %></li>
 				  </ul>
 				</div>
 			</td>
@@ -29,5 +29,5 @@
 </table>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link", data: { no_turbolink: true } %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary", data: { no_turbolink: true } %>
 <% end %>
