--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -1,5 +1,6 @@
-<div class="center">
-  <h2>Your Sales History</h2>
+<div class="left">
+  <h3>Your Sales History</h3>
+  <p>This section lists the details of any items you've sold here in the past.</p>
 </div>
 
 <table class="table table-striped table-bordered">
@@ -37,5 +38,5 @@
 <br>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link", data: { no_turbolink: true } %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary", data: { no_turbolink: true } %>
 <% end %>
