--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,8 @@
 body {
   background-color: #F5F5F1;
   color: #333333;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; 
+  padding-bottom: 70px;
 }
 
 .navbar-default {
@@ -38,7 +39,6 @@ body {
 }
 
 .jumbotron {
-  margin-top: 80px;
   background-image: url('https://s3.amazonaws.com/bs-etsydemo/site-imagery/jumbotron.jpg');
   h1, h2 {
     font-family: guardian-egyptt, georgia, serif;
@@ -48,4 +48,14 @@ body {
 
 h1 {
   
+}
+
+.footer {
+   position: relative;
+   display: block;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 60px;   /* Height of the footer */
+   background: #6cf;
 }
