Added test glyphicons

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -22,5 +22,8 @@
 <br>
 
 <% if user_signed_in? %>
-  <%= link_to "New Listing", new_listing_path, class: "btn btn-primary", data: { no_turbolink: true } %>
+
+<%= link_to new_listing_path, class: "btn btn-primary", data: { no_turbolink: true } do %>
+  <i class="glyphicon glyphicon-plus"></i> New Listing
+<% end %>
 <% end %>
