--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,6 @@ h1 {
    bottom: 0;
    left: 0;
    width: 100%;
-   height: 60px;   /* Height of the footer */
-   background: #6cf;
+   // height: 60px;   /* Height of the footer */
+   // background: #6cf;
 }
